# pyWWA

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  DB_SCHEMA.sql  MANIFEST.in  RADAR.csh  README  README.md  RR3parse.py  STOIA_parser.py  STOIAparse.py  TAF.txt  afos_dump.py  afosdb_cat.py  afosdump.py  archive.csh  archive_noaaport.sh  assignEventID.py  aviation.py  cat.py  cfg.ini-in  check_environment.py  cli_parser.py  common.py  compressMADIS.csh  compress_madis.sh  conda_requirements.txt  conftest.py  crontab_iem21.txt  delete_nmq.sh  dsm2afos.py  dsm_parser.py  email_gateway.py  environment.yml  fake_afos_dump.py  generic_product.py  gini2gis.py  gr.csh  (+73 more)
.github/: dependabot.yml
.github/workflows/: build.yml  codeql.yml  etchosts.txt
docs/: vtec.txt
examples/: 07012922.sao  ADA.txt  ADM.txt  ADMNES.txt  ADMNFD.txt  ADR.txt  AFD.txt  AFD2.txt  AQA.txt  AQI.txt  AT5.txt  AVA.txt  AVG.txt  AVV.txt  AVW.txt  AWU.txt  AWW.txt  BLU.txt  CAE.txt  CEM.txt  CF6.txt  CFW.txt  CGR.txt  CLI.txt  CLIANN.txt  CLIDSM.txt  CLIEST.txt  CLIHOU.txt  CLM.txt  CORM6.txt  CORM6_RTP.txt  CRF.txt  CWA.txt  CWF.txt  CWFAER_0.txt  CWFAER_1.txt  CWFAER_2.txt  DGT.txt  DSM.txt  DSM2.txt  (+205 more)
examples/BUFR/: ISAB02_CWAO.bufr  ISAE01_SKBO.bufr  ISAI01_SBBR.bufr  ISCD01_OPKC.bufr  ISCI01_SABM.bufr  ISIA14_CWAO.bufr  ISMA01_FNLU.bufr  ISMA01_FNLU_badid.bufr  ISMA01_FNLU_badid2.bufr  ISMD21_UAST.bufr  ISMI60_SBBR.bufr  ISND01_LEMM.bufr  ISNN26_LFPW.bufr  ISXD03_EDZW.bufr  ISXT14_EGRR.bufr  IS_2023120401.bufr
examples/SHEF/: RR1.txt  RR3ARX_1.txt  RR3ARX_2.txt  RR3MPX_1.txt  RR3MPX_2.txt  RR7KRF.txt  RR7ZOB.txt  RR8KRF.txt  RR8MSR.txt  RRSNMC.txt
examples/shef/: RR2FGF.txt
goes/: conus_composite.py  greys_cmap.py  greysramp.txt  ir_cmap.py  irramp.txt  make_ramp_legend.py  netcdf2png.py  run_goes.sh  wv_cmap.py  wvramp.txt
parsers/: afos_dump.py  alaska_marine.py  aviation.py  awos_ingest.py  bufr_surface.py  cf6_parser.py  cli_parser.py  common.py  cwa_parser.py  dsm2afos.py  dsm_parser.py  ero_parser.py  fake_afos_dump.py  fd_parser.py  ffg_parser.py  gairmet_parser.py  generic_parser.py  gini2gis.py  hml_parser.py  lsr_parser.py  mcd_parser.py  metar_parser.py  mos_parser.py  ncr2postgis.py  nexrad3_attr.py  nldn_parser.py  parse_pirep.py  parse_uvi.py  pirep_parser.py  rr7.py  scp_parser.py  shef_parser.py  spammer.py  spc_parser.py  spe_parser.py  split_mav.py  sps_parser.py  stoia_parser.py  taf_parser.py  vtec_parser.py  (+2 more)
parsers/pywwa/: __init__.py  cmdline.py  common.py  database.py  ldm.py  testing.py  xmpp.py
parsers/pywwa/workflows/: afos_dump.py  aviation.py  awos_ingest.py  bufr_surface.py  cf6_parser.py  cli_parser.py  cwa_parser.py  dsm2afos.py  dsm_parser.py  ero_parser.py  fake_afos_dump.py  fd_parser.py  ffg_parser.py  gairmet_parser.py  generic_parser.py  gini2gis.py  hml_parser.py  lsr_parser.py  mcd_parser.py  metar_parser.py  mos_parser.py  nexrad3_attr.py  nldn_parser.py  pirep_parser.py  rr7.py  scp_parser.py  shef_parser.py  spammer.py  spc_parser.py  spe_parser.py  split_mav.py  sps_parser.py  taf_parser.py  vtec_parser.py  watch_parser.py  xteus_parser.py
parsers/tests/: test_common.py
pqact.d/: README.md  pqact.conf  pqact_afos.conf  pqact_filer.conf  pqact_filer_exp.conf  pqact_filer_exp_metvm0.conf  pqact_filer_iemarchive.conf  pqact_gini.conf  pqact_iemingest.conf  pqact_iemvs.conf  pqact_nexrad.conf  pqact_shef.conf
shef_workspace/: .gitignore  SHEFPARM  shefit
src/pywwa/: __init__.py  cmdline.py  common.py  database.py  ldm.py  ldmbridge.py  memclient.py  testing.py  xmpp.py
src/pywwa/data/: conus.shp  conus.shx  faa_apt.tbl  nexrad.stns  pirep_navaids.tbl  vors.tbl  wmo2iso3166.tbl
src/pywwa/workflows/: __init__.py  afos_dump.py  alaska_marine.py  aviation.py  awos_ingest.py  bufr_surface.py  cf6.py  cli.py  cwa.py  cwa_parser.py  dsm.py  dsm2afos.py  ero.py  fake_afos_dump.py  fd.py  fd_parser.py  ffg.py  gairmet.py  gairmet_parser.py  generic.py  gini2gis.py  hml.py  lsr.py  lsr_parser.py  mcd.py  metar.py  metar_parser.py  mos.py  mos_parser.py  nexrad3_attr.py  nldn.py  pirep.py  rr7.py  scp.py  shef.py  shef_parser.py  spammer.py  spc.py  spe.py  (+8 more)
support/: TextProduct.py  __init__.py  gini.py  hvtec.py  ldmbridge.py  reference.py  spcpts.py  spcwatch.tbl  stationTable.py  ugc.py  utils.py  vtec.py
tables/: faa_apt.tbl  pirep_navaids.tbl  spcwatch.tbl  vors.tbl
tests/: test_cmdline.py  test_common.py  test_common_syslog.py  test_database.py  test_init.py  test_ldm.py  test_ldmbridge.py  test_workflow_main.py  test_workflows.py  test_xmpp.py
tests/workflows/: test_afos_dump.py  test_alaska_marine.py  test_aviation.py  test_awos_ingest.py  test_bufr_surface.py  test_cf6_parser.py  test_cli_parser.py  test_cwa.py  test_dsm2afos.py  test_dsm_parser.py  test_ero.py  test_fake_afos_dump.py  test_fd_parser.py  test_generic_parser.py  test_gini2gis.py  test_lsr_parser.py  test_mcd.py  test_metar_parser.py  test_mos.py  test_nexrad3_attr.py  test_nldn.py  test_pirep_parser.py  test_rr7.py  test_scp_parser.py  test_shef_parser.py  test_spammer.py  test_spc.py  test_spe_parser.py  test_sps.py  test_taf_parser.py  test_vtec_parser.py  test_watch_parser.py  test_xteus.py
twittytwister/: twitter.py
util/: afosdb_cat.py  afosdb_cat2.py  afosdb_pilcat.py  archive_mos_feeder.py  archive_noaaport.sh  archive_nwwsoi.sh  assignEventID.py  assign_etn_2017.py  assign_event_id.py  authorize_iembot_app.py  awx_metar_supplement.py  backfill_hfmetar.py  check_chars.py  check_pireps_against_aviationwx.py  clean_noaaport_text.py  clean_svs.py  cli_classes.py  compare_metar_ingest.py  compress_madis.py  compress_madis.sh  copy_iem_network.py  correct_missing_ugc.py  dump_wwa_list.py  feed_archived_ncr.py  gen_channels_html_table.py  get_text_from_nwschat.py  gr.csh  hvtec_nwsli.txt  make_faa_apt_table.py  make_ir_ramp.py  make_text_noaaportish.py  merge_coop_nwsli.py  merge_hvtec_nwsli.py  merge_nws_ugc.py  migrate_county2zones.py  nwws_oi_ingest.py  oauthtwitter.py  onewire_runner.py  plot_invalid_polygon.py  prod_feeder_loop.py  (+27 more)
