[build-system]
requires = ["setuptools", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["version"]
name = "pywwa"
keywords = ["meteorology", "nws"]
license = {"text" = "Apache"}
description = "A suite of parsers and utils for NWS products."
dependencies = [
    "click",
    "geopandas",
    "metpy",
    "metar >=1.7.0",
    "netCDF4",
    "numpy",
    "pandas",
    "pint",
    "psycopg",
    "pybufrkit",
    "pyiem",
    "pymemcache",
    "pyproj",
    "requests",
    "shapely",
    "sqlalchemy",
    "treq",
    "twisted",
]

[tool.pytest.ini_options]
filterwarnings = ["ignore:numpy.ndarray size changed:RuntimeWarning"]

[tool.ruff]
lint.select = ["E", "F", "I", "T"]
target-version = "py39"
line-length = 79

[tool.ruff.lint.per-file-ignores]
"goes/*.py" = ["T201"]
"util/*.py" = ["T201"]

[options.entry_points]
scripts = [
    "pywwa-parse-afos-dump = pywwa.workflows.afos_dump:main",
    "pywwa-parse-aviation = pywwa.workflows.aviation:main",
    "pywwa-parse-bufr-surface = pywwa.workflows.bufr_surface:main",
    "pywwa-parse-cf6 = pywwa.workflows.cf6:main",
    "pywwa-parse-cli = pywwa.workflows.cli:main",
    "pywwa-parse-cwa = pywwa.workflows.cwa:main",
    "pywwa-parse-dsm = pywwa.workflows.dsm:main",
    "pywwa-parse-dsm2afos = pywwa.workflows.dsm2afos:main",
    "pywwa-parse-ero = pywwa.workflows.ero:main",
    "pywwa-parse-fake-afos-dump = pywwa.workflows.fake_afos_dump:main",
    "pywwa-parse-fd = pywwa.workflows.fd:main",
    "pywwa-parse-ffg = pywwa.workflows.ffg:main",
    "pywwa-parse-gairmet = pywwa.workflows.gairmet:main",
    "pywwa-parse-generic = pywwa.workflows.generic:main",
    "pywwa-parse-gini2gis = pywwa.workflows.gini2gis:main",
    "pywwa-parse-hml = pywwa.workflows.hml:main",
    "pywwa-parse-lsr = pywwa.workflows.lsr:main",
    "pywwa-parse-mcd = pywwa.workflows.mcd:main",
    "pywwa-parse-metar = pywwa.workflows.metar:main",
    "pywwa-parse-mos = pywwa.workflows.mos:main",
    "pywwa-parse-nexrad3-attr = pywwa.workflows.nexrad3_attr:main",
    "pywwa-parse-nldn = pywwa.workflows.nldn:main",
    "pywwa-parse-pirep = pywwa.workflows.pirep:main",
    "pywwa-parse-rr7 = pywwa.workflows.rr7:main",
    "pywwa-parse-scp = pywwa.workflows.scp:main",
    "pywwa-parse-shef = pywwa.workflows.shef:main",
    "pywwa-parse-spc = pywwa.workflows.spc:main",
    "pywwa-parse-spe = pywwa.workflows.spe:main",
    "pywwa-parse-split-mav = pywwa.workflows.split_mav:main",
    "pywwa-parse-sps = pywwa.workflows.sps:main",
    "pywwa-parse-taf = pywwa.workflows.taf:main",
    "pywwa-parse-vtec = pywwa.workflows.vtec:main",
    "pywwa-parse-watch = pywwa.workflows.watch:main",
    "pywwa-parse-xteus = pywwa.workflows.xteus:main",
    "pywwa-spammer = pywwa.workflows.spammer:main",
]

[tool.setuptools_scm]
version_scheme = "post-release"
