[metadata]
name = pywwa
author = daryl herzmann
author_email = akrherz@gmail.com
url = https://github.com/akrherz/pyWWA
keywords = meteorology
license = Apache
license_files = LICENSE
description = A suite of parsers and utils for NWS products.
description_file = README.md

[aliases]
test = pytest

[pep8]
ignore = W503

[options]
include_package_data = False
# Puzzling why this nomenclature is right.
package_dir =
    = src
packages = find:
setup_requires = setuptools_scm

[options.packages.find]
where = src
