[metadata]
name = pywwa
author = daryl herzmann
author_email = akrherz@gmail.com
url = https://github.com/akrherz/pyWWA
keywords = meteorology
license = Apache
license_files = LICENSE
description = A suite of parsers and utils for NWS products.
description_file = README.md

[aliases]
test = pytest

[pep8]
ignore = W503

[options]
include_package_data = False
# Puzzling why this nomenclature is right.
package_dir =
    = src
packages = find:
install_requires =
    click
    geopandas
    metpy
    metar >=1.7.0
    netCDF4
    numpy
    pandas
    pint
    psycopg
    pybufrkit
    pyiem
    pyproj
    requests
    shapely
    sqlalchemy
    treq
    twisted
setup_requires =
    setuptools_scm

[options.entry_points]
console_scripts =
    pywwa-parse-afos-dump = pywwa.workflows.afos_dump:main
    pywwa-parse-aviation = pywwa.workflows.aviation:main
    pywwa-parse-bufr-surface = pywwa.workflows.bufr_surface:main
    pywwa-parse-cf6 = pywwa.workflows.cf6:main
    pywwa-parse-dsm = pywwa.workflows.dsm:main
    pywwa-parse-ero = pywwa.workflows.ero:main
    pywwa-parse-fake-afos-dump = pywwa.workflows.fake_afos_dump:main
    pywwa-parse-fd = pywwa.workflows.fd:main
    pywwa-parse-ffg = pywwa.workflows.ffg:main
    pywwa-parse-gairmet = pywwa.workflows.gairmet:main
    pywwa-parse-generic = pywwa.workflows.generic:main
    pywwa-parse-hml = pywwa.workflows.hml:main
    pywwa-parse-lsr = pywwa.workflows.lsr:main
    pywwa-parse-mcd = pywwa.workflows.mcd:main
    pywwa-parse-metar = pywwa.workflows.metar:main
    pywwa-parse-mos = pywwa.workflows.mos:main
    pywwa-parse-nldn = pywwa.workflows.nldn:main
    pywwa-parse-pirep = pywwa.workflows.pirep:main
    pywwa-parse-scp = pywwa.workflows.scp:main
    pywwa-parse-shef = pywwa.workflows.shef:main
    pywwa-parse-spc = pywwa.workflows.spc:main
    pywwa-parse-spe = pywwa.workflows.spe:main
    pywwa-parse-split-mav = pywwa.workflows.split_mav:main
    pywwa-parse-sps = pywwa.workflows.sps:main
    pywwa-parse-taf = pywwa.workflows.taf:main
    pywwa-parse-vtec = pywwa.workflows.vtec:main
    pywwa-parse-watch = pywwa.workflows.watch:main
    pywwa-parse-xteus = pywwa.workflows.xteus:main
    pywwa-spammer = pywwa.workflows.spammer:main

[options.packages.find]
where = src
